cedar-lean/UnitTest/parser_tests/negative/slot_in_condition.cedar
permit(principal, action, resource) when { ?principal == User::"alice" };
